# luna

./: .gitignore  AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  TOOLS.md  USER.md  capture_session.mjs  fase1_qa_validate.sh  fase2_qa_validate.sh  gmail_test.py  madrugada-report-2026-03-08-v2.md  madrugada-report-2026-03-08.md  package-lock.json  package.json  queue
polymarket-mm/: Dockerfile  Makefile  README.md  decision_envelope.py  docker-compose.yml  flatten_inventory.py  pyproject.toml  requirements.txt  transport.py
polymarket-mm/a2a/: README.md  __init__.py  ctf_delegate.py  rpc_manager_ref.py  task_spec.py
polymarket-mm/ai_copilot/: __init__.py  anomaly_detector.py  param_tuner.py  post_mortem.py
polymarket-mm/cli/: __init__.py  position_manager.py
polymarket-mm/config/: __init__.py  markets-prod-003.yaml  markets.yaml  settings.py
polymarket-mm/core/: __init__.py  alert_manager.py  event_bus.py  kill_switch.py  logger.py  main.py
polymarket-mm/data/: __init__.py  market_data_provider.py  public_clob_quote_client.py  rest_client.py  ws_client.py
polymarket-mm/docs/: plan-unified-runner.md
polymarket-mm/execution/: __init__.py  ctf_merge.py  execution_provider.py  flatten_inventory.py  live_execution.py  order_manager.py  quantizer.py  queue_tracker.py  reconciler.py  unwind.py
polymarket-mm/models/: __init__.py  feature_vector.py  market_state.py  order.py  position.py  quote_plan.py
polymarket-mm/monitoring/: __init__.py  alerter.py  dashboard.py  health.py  metrics.py
polymarket-mm/paper/: __init__.py  __main__.py  chaos_injector.py  (+9 more)
(+1277 files in other folders)
