[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-mm"
version = "0.1.0"
description = "Polymarket Market Maker — maker-only bilateral quoting on CLOB"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "uvloop>=0.19.0",
    "structlog>=24.1.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.1.0",
    "pydantic>=2.5.0",
    "httpx[http2]>=0.26.0",
    "websockets>=12.0",
    "web3>=6.14.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.92.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "core*", "models*", "data*", "strategy*", "execution*", "web3_infra*", "storage*", "monitoring*", "ai_copilot*", "paper*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
